--- a/DFM/references.bib
+++ b/DFM/references.bib
@@ -22,3 +22,23 @@ url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/mawe.201500351},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/mawe.201500351},
 year = {2015}
 }
+@article{kassapoglou,
+  title={Design and Analysis of Composite Structures with Applications to Aero-
+space Structures},
+  author={Ch, Kassapoglou},
+  year={2013},
+  publisher={Wiley}
+}
+@article{chung,
+  title={Composite Materials – Science and Application},
+  author={D.D.L., Chung},
+  year={2010},
+  publisher={Springer}
+}
+@article{krolikowski,
+  title={Polymer composites used in construction},
+  author={W., Królikowski},
+  year={2012},
+  publisher={PWN}
+}
+
