--- a/FEM/Assignment_3/Assignment 3.ipynb
+++ b/FEM/Assignment_3/Assignment 3.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***\n",
-    "## Problem 2\n",
-    "### Part (a)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -28,6 +19,9 @@
     }
    ],
    "source": [
+    "# Problem (2)\n",
+    "# Part (a)\n",
+    "\n",
     "from sympy.solvers import solve\n",
     "from sympy import Symbol\n",
     "from sympy import *\n",
@@ -243,16 +237,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Part (b) BVP 1 \n",
-    "#### Heat transfer in an insulated rod"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -260,24 +246,24 @@
      "output_type": "stream",
      "text": [
       "Quadratic Solution, U : \n",
-      " [0.907922912205336 0.907922912205338 0.907922912205339 0.907922912205357\n",
-      " 0.907922912205398 0.907922912205485 0.907922912205571]\n"
-     ]
-    },
-    {
-     "ename": "LinAlgError",
-     "evalue": "singular matrix",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-35b0f202ba24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    211\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mq1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnEle\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnEle\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mq2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 213\u001b[0;31m     \u001b[0msl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    214\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\nLinear Solution, U : \\n'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/scipy/linalg/basic.py\u001b[0m in \u001b[0;36minv\u001b[0;34m(a, overwrite_a, check_finite)\u001b[0m\n\u001b[1;32m    817\u001b[0m         \u001b[0minv_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetri\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpiv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlwork\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlwork\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite_lu\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    818\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 819\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mLinAlgError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"singular matrix\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    820\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    821\u001b[0m         raise ValueError('illegal value in %d-th argument of internal '\n",
-      "\u001b[0;31mLinAlgError\u001b[0m: singular matrix"
+      " [119.600786870395 119.601973839834 119.603451860820 119.605221704240\n",
+      " 119.607284304424 119.609640739131 119.612292250708 119.615240226036\n",
+      " 119.618486218102 119.622031925884 119.625879216215 119.630030103669\n",
+      " 119.634486772945 119.639251558629 119.644326967572 119.649715659239\n",
+      " 119.655420468636 119.661444385969 119.667790578854 119.674462372815\n",
+      " 119.681463276846]\n",
+      "\n",
+      "Linear Solution, U : \n",
+      " [116.844160630367 116.848098377241 116.847415513492 116.842110604607\n",
+      " 116.832172506375 116.817580341483 116.798303455655 116.774301353259\n",
+      " 116.745523612231 116.711909778156 116.673389237267]\n"
      ]
     }
    ],
    "source": [
+    "# Part (b) BVP 1 \n",
+    "# Hear transfer through fin\n",
+    "\n",
     "from sympy.solvers import solve\n",
     "from sympy import Symbol\n",
     "from sympy import *\n",
@@ -452,14 +438,259 @@
     "# user inputs___________________________________________________________________\n",
     "domainLen=1\n",
     "# number of elements\n",
-    "nEle=3\n",
+    "nEle=10\n",
     "# problem data\n",
-    "a=0.01\n",
-    "c=0\n",
-    "f=0\n",
+    "a=0.1  # a= kA\n",
+    "c=0.021  # c = P*beta\n",
+    "f=2.5    # f = P*beta*T_infinity\n",
     "method='Both' # accepts 'Quadratic','linear','Both'\n",
     "# dirchlet boundary conditions values at left and right end\n",
-    "bcs=[2,3] # assumed boundary values [left end,right end]\n",
+    "bcs=[125,80] # assumed boundary values [left end,right end]\n",
+    "# user inputs___________________________________________________________________\n",
+    "\n",
+    "\n",
+    "if method=='Quadratic':\n",
+    "    kq,fq=kfmatixQad(nEle,domainLen,a,c,f)\n",
+    "    q1q,q2q=solQ(kq,fq,nEle,bcs,'Quadratic')\n",
+    "    fq[0]=fq[0]+q1q\n",
+    "    fq[len(fq)-1]=fq[len(fq)-1]+q2q\n",
+    "    sq=linalg.inv(kq).dot(fq)\n",
+    "    print('Quadratic Solution, U : \\n',sq)\n",
+    "\n",
+    "elif method=='linear':\n",
+    "    k,f=kfmatixLin(nEle,domainLen,a,c,f)\n",
+    "    q1,q2 = solQ(k,f,nEle,bcs,'linear')\n",
+    "    f[0]=f[0]+q1\n",
+    "    f[nEle]=f[nEle]+q2\n",
+    "    sl=linalg.inv(k).dot(f)\n",
+    "    print('Linear Solution, U : \\n',sl)\n",
+    "\n",
+    "elif method=='Both':\n",
+    "    kq,fq=kfmatixQad(nEle,domainLen,a,c,f)\n",
+    "    q1q,q2q=solQ(kq,fq,nEle,bcs,'Quadratic')\n",
+    "    fq[0]=fq[0]+q1q\n",
+    "    fq[len(fq)-1]=fq[len(fq)-1]+q2q\n",
+    "    sq=linalg.inv(kq).dot(fq)\n",
+    "    print('Quadratic Solution, U : \\n',sq)\n",
+    "    k,f=kfmatixLin(nEle,domainLen,a,c,f)\n",
+    "    q1,q2 = solQ(k,f,nEle,bcs,'linear')\n",
+    "    f[0]=f[0]+q1\n",
+    "    f[nEle]=f[nEle]+q2\n",
+    "    sl=linalg.inv(k).dot(f)\n",
+    "    print('\\nLinear Solution, U : \\n',sl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quadratic Solution, U : \n",
+      " [192.652230902594 192.653727385186 192.656550797817 192.660702530110\n",
+      " 192.666184680188 192.672999967030 192.681151820677 192.690644294893\n",
+      " 192.701482158532 192.713670808274 192.727216361268 192.742125567968\n",
+      " 192.758405906259 192.776065493484 192.795113183078 192.815558475906\n",
+      " 192.837411617594 192.860683512384 192.885385820997 192.911530870612\n",
+      " 192.939131757948]\n",
+      "\n",
+      "Linear Solution, U : \n",
+      " [189.249962189202 189.254213568518 189.256972877613 189.258245636948\n",
+      " 189.258034392889 189.256338722806 189.253155234230 189.248477558059\n",
+      " 189.242296335824 189.234599200956 189.225370754053]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Part (b) BVP 2 \n",
+    "# 1-D Heat transfer\n",
+    "\n",
+    "\n",
+    "from sympy.solvers import solve\n",
+    "from sympy import Symbol\n",
+    "from sympy import *\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from scipy.sparse import *\n",
+    "from numpy.linalg import inv\n",
+    "from array import *\n",
+    "from scipy import linalg\n",
+    "x=Symbol('x')\n",
+    "\n",
+    "# function to find k and f for linear elements\n",
+    "def kfmatixLin(nEle,domainLen,a,c,f):\n",
+    "    xb=[]\n",
+    "    xa=[]\n",
+    "    for i in range(1,nEle+1):\n",
+    "        xb.append(i*(domainLen/nEle))\n",
+    "        xa.append((i-1)*(domainLen/nEle))\n",
+    "    k=[]\n",
+    "    Ftemp=[]\n",
+    "    # for ith element  # NOTE: [[element 1 k's],[element 2 k's], ...]\n",
+    "    for i in range(nEle):\n",
+    "        psi_1 = (xb[i]-x)/(xb[i]-xa[i])\n",
+    "        psi_2 = (x-xa[i])/(xb[i]-xa[i])\n",
+    "        # print(psi_1)\n",
+    "        # print(psi_2)\n",
+    "        k.append([])\n",
+    "        Ftemp.append(integrate(f*psi_1 ,(x, xa[i], xb[i])))\n",
+    "        Ftemp.append(integrate(f*psi_2 ,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_1,x)*diff(psi_1,x)+c*psi_1*psi_1,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_1,x)*diff(psi_2,x)+c*psi_1*psi_2,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_2,x)*diff(psi_1,x)+c*psi_2*psi_1,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_2,x)*diff(psi_2,x)+c*psi_2*psi_2,(x, xa[i], xb[i])))\n",
+    "\n",
+    "    F=[]\n",
+    "    F.append(Ftemp[0])\n",
+    "    for i in range(0,len(Ftemp)-2,2):\n",
+    "        F.append(Ftemp[i+1]+Ftemp[i+2])\n",
+    "    F.append(Ftemp[len(Ftemp)-1])\n",
+    "\n",
+    "    # print('k = ',k)\n",
+    "    # print('Ftemp',Ftemp)\n",
+    "    # print('F = ',F)\n",
+    "    # two diagonals of the tridiagonal matrix\n",
+    "    diagA=[]\n",
+    "    diagB=[]\n",
+    "    # for three element 4*4 k matrix\n",
+    "    for i in range(nEle):\n",
+    "        diagA.append(k[i][1])\n",
+    "    # print('diagA',diagA)\n",
+    "    # NOTE: no need for diagC as it will always be same as diagA\n",
+    "\n",
+    "    diagB.append(k[0][0])\n",
+    "    for i in range(nEle-1):\n",
+    "        diagB.append(k[i][3]+k[i+1][0])\n",
+    "    diagB.append(k[nEle-1][3])\n",
+    "    # print('diagB',diagB)\n",
+    "    diagA=np.array(diagA, dtype=np.float64)\n",
+    "    diagB=np.array(diagB, dtype=np.float64)\n",
+    "\n",
+    "    K = np.array( diags([diagB,diagA,diagA], [0,-1, 1]).todense() )\n",
+    "    return(K,F)\n",
+    "# function to find k and f for Quadratic elements\n",
+    "def kfmatixQad(nEle,domainLen,a,c,f):\n",
+    "    xb=[]\n",
+    "    xa=[]\n",
+    "    xc=[]\n",
+    "    for i in range(1,nEle+1):\n",
+    "        xb.append(i*(domainLen/nEle))\n",
+    "        xa.append((i-1)*(domainLen/nEle))\n",
+    "    for i in range(nEle):\n",
+    "        xc.append(0.5*xa[i]+0.5*xb[i])\n",
+    "    # print('xa',xa)\n",
+    "    # print('xb',xb)\n",
+    "    # print('xc',xc)\n",
+    "    k=[]\n",
+    "    Ftemp=[]\n",
+    "    # for ith element  # NOTE: [[element 1 k's],[element 2 k's], ...]\n",
+    "    for i in range(nEle):\n",
+    "        psi_1 = ((x-xc[i])*(x-xb[i]))/((xa[i]-xc[i])*(xa[i]-xb[i]))\n",
+    "        psi_2 = ((x-xa[i])*(x-xb[i]))/((xc[i]-xa[i])*(xc[i]-xb[i]))\n",
+    "        psi_3 = ((x-xa[i])*(x-xc[i]))/((xb[i]-xa[i])*(xb[i]-xc[i]))\n",
+    "        # print(psi_1)\n",
+    "        # print(psi_2)\n",
+    "        k.append([])\n",
+    "        Ftemp.append(integrate(f*psi_1 ,(x, xa[i], xb[i])))\n",
+    "        Ftemp.append(integrate(f*psi_2 ,(x, xa[i], xb[i])))\n",
+    "        Ftemp.append(integrate(f*psi_3 ,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_1,x)*diff(psi_1,x)+c*psi_1*psi_1,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_1,x)*diff(psi_2,x)+c*psi_1*psi_2,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_1,x)*diff(psi_3,x)+c*psi_1*psi_3,(x, xa[i], xb[i])))\n",
+    "\n",
+    "        k[i].append(integrate( a*diff(psi_2,x)*diff(psi_1,x)+c*psi_2*psi_1,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_2,x)*diff(psi_2,x)+c*psi_2*psi_2,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_2,x)*diff(psi_3,x)+c*psi_2*psi_3,(x, xa[i], xb[i])))\n",
+    "\n",
+    "        k[i].append(integrate( a*diff(psi_3,x)*diff(psi_1,x)+c*psi_3*psi_1,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_3,x)*diff(psi_2,x)+c*psi_3*psi_2,(x, xa[i], xb[i])))\n",
+    "        k[i].append(integrate( a*diff(psi_3,x)*diff(psi_3,x)+c*psi_3*psi_3,(x, xa[i], xb[i])))\n",
+    "\n",
+    "    F=[]\n",
+    "    F.append(Ftemp[0])\n",
+    "    F.append(Ftemp[1])\n",
+    "    t=0\n",
+    "    i=0\n",
+    "    while t<nEle-1:\n",
+    "        F.append(Ftemp[i+2]+Ftemp[i+3])\n",
+    "        F.append(Ftemp[i+4])\n",
+    "        i=i+3\n",
+    "        t=t+1\n",
+    "    F.append(Ftemp[len(Ftemp)-1])\n",
+    "\n",
+    "    # print('k = ',k)\n",
+    "    # print('Ftemp',Ftemp)\n",
+    "    # print('F = ',F)\n",
+    "    # print('len f',len(F))\n",
+    "    # three diagonals of the quadiagonal matrix\n",
+    "    diagA=[]\n",
+    "    diagB=[]\n",
+    "    diagC=[]\n",
+    "    # for three element 4*4 k matrix\n",
+    "    for i in range(nEle):\n",
+    "        diagA.append(k[i][1])\n",
+    "        diagA.append(k[i][5])\n",
+    "    # print('diagA',diagA)\n",
+    "\n",
+    "    for i in range(nEle):\n",
+    "        diagC.append(k[i][2])\n",
+    "        if i!=nEle-1:\n",
+    "            diagC.append(0.0)\n",
+    "    # print('diagC',diagC)\n",
+    "\n",
+    "    diagB.append(k[0][0])\n",
+    "    diagB.append(k[0][4])\n",
+    "    for i in range(nEle-1):\n",
+    "        diagB.append(k[i][8]+k[i+1][0])\n",
+    "        diagB.append(k[i+1][4])\n",
+    "    diagB.append(k[nEle-1][8])\n",
+    "\n",
+    "    # print('diagB',diagB)\n",
+    "    diagA=np.array(diagA, dtype=np.float64)\n",
+    "    diagB=np.array(diagB, dtype=np.float64)\n",
+    "    diagC=np.array(diagC, dtype=np.float64)\n",
+    "\n",
+    "    K = np.array(diags([diagB,diagA,diagA,diagC,diagC], [0,-1, 1,-2, 2]).todense() )\n",
+    "    return(K,F)\n",
+    "# function to find Q at the left and right ends\n",
+    "def solQ(k,f,nEle,bcs,method):\n",
+    "    bc1=Symbol('bc1')\n",
+    "    bc2=Symbol('bc2')\n",
+    "    q1=Symbol('q1')\n",
+    "    q2=Symbol('q2')\n",
+    "    c1=0\n",
+    "    c2=0\n",
+    "    if method=='linear':\n",
+    "        for i in range(nEle+1):\n",
+    "            c1=c1+k[0][i]\n",
+    "            c2=c2+k[nEle][i]\n",
+    "        q1_eqn = c1*bc1-f[0]+q1\n",
+    "        q2_eqn = c2*bc2-f[nEle]-q2\n",
+    "    elif method=='Quadratic':\n",
+    "        for i in range(2*nEle+1):\n",
+    "            c1=c1+k[0][i]\n",
+    "            c2=c2+k[nEle][i]\n",
+    "        q1_eqn = c1*bc1-f[0]+q1\n",
+    "        q2_eqn = c2*bc2-f[2*nEle]-q2\n",
+    "    if len(bcs)==0:\n",
+    "        return(solve(q1_eqn,q1),solve(q2_eqn,q2))\n",
+    "    elif len(bcs)==2:\n",
+    "        return(solve(q1_eqn,q1)[0].subs(bc1,bcs[0]),solve(q2_eqn,q2)[0].subs(bc2,bcs[1]))\n",
+    "\n",
+    "# user inputs___________________________________________________________________\n",
+    "domainLen=1\n",
+    "# number of elements\n",
+    "nEle=10\n",
+    "# problem data\n",
+    "a=0.1  # a= kA\n",
+    "c=0.02  # c = Aq+P*beta\n",
+    "f=3.8    # f = P*beta*T_infinity\n",
+    "method='Both' # accepts 'Quadratic','linear','Both'\n",
+    "# dirchlet boundary conditions values at left and right end\n",
+    "bcs=[195,180] # assumed boundary values [left end,right end]\n",
     "# user inputs___________________________________________________________________\n",
     "\n",
     "\n",
