--- a/CFD/Project_2_Lid/lid.tex
+++ b/CFD/Project_2_Lid/lid.tex
@@ -17,7 +17,7 @@
 \title{\textbf{Analysis of 2-D Lid-Driven Cavity Problem}}
 \author[1]{\textbf{Aakash Yadav}}
 \affil[1]{\textbf{Indian Institute of Technology, Tirupati}}
-\date{\textbf{March 2019}}
+\date{\textbf{April 2019}}
 \geometry{a4paper, portrait, margin=1in}
 
 \begin{document}
@@ -80,7 +80,8 @@ For over 150 years, the Wiedemann Franz law has proven to be stable amongst the 
 But recent experiments over a couple of decades show that there are several limitations to the law, the value of Lorenz number L is not same for every materials and the law does not hold for intermediate temperatures. Experiments have shown that the value of Lorenz number, $L$, while roughly constant, is not exactly the same for all materials. 
  \citep{Bristol,2017Sci...355..371L} 
 
-
+\section{Courant–Friedrichs–Lewy anakysis}
+In mathematics, the Courant–Friedrichs–Lewy (CFL) condition is a necessary condition for convergence while solving certain partial differential equations (usually hyperbolic PDEs) numerically. It arises in the numerical analysis of explicit time integration schemes, when these are used for the numerical solution. As a consequence, the time step must be less than a certain time in many explicit time-marching computer simulations, otherwise the simulation produces incorrect results. The condition is named after Richard Courant, Kurt Friedrichs, and Hans Lewy who described it in their 1928 paper.
 
 \section{Initial Conditions and Boundary Conditions}
 
