--- a/CFD/Project_2_Lid/lid.tex
+++ b/CFD/Project_2_Lid/lid.tex
@@ -82,6 +82,7 @@ But recent experiments over a couple of decades show that there are several limi
 
 \section{Courant–Friedrichs–Lewy anakysis}
 In mathematics, the Courant–Friedrichs–Lewy (CFL) condition is a necessary condition for convergence while solving certain partial differential equations (usually hyperbolic PDEs) numerically. It arises in the numerical analysis of explicit time integration schemes, when these are used for the numerical solution. As a consequence, the time step must be less than a certain time in many explicit time-marching computer simulations, otherwise the simulation produces incorrect results. The condition is named after Richard Courant, Kurt Friedrichs, and Hans Lewy who described it in their 1928 paper.
+ We have the 
 
 \section{Initial Conditions and Boundary Conditions}
 
