--- a/CFD/Project_2_Lid/references.bib
+++ b/CFD/Project_2_Lid/references.bib
@@ -12,6 +12,15 @@ ABSTRACT = {In this review, we report the state-of-the-art of polymers in thermo
 DOI = {10.3390/ma7096701}
 }
 
+@article{cfl,
+author = {Courant R., Friedrichs K. and Lewy H. Math. Ann.},
+title = {Über die partiellen Differenzengleichungen der mathematischen Physik},
+journal = {Springer-Verlag},
+year = {1928},
+doi = {10.1111/j.1745-3933.2007.00389.x},
+URL = {https://doi.org/10.1007/BF01448839},
+}
+
 @article{doi:10.1111/j.1745-3933.2007.00389.x,
 author = {Bespalov, P. A. and Savina, O. N.},
 title = {Generalized Wiedemann–Franz law and temperature jump in space plasmas with ion-acoustic turbulence},
